Fix layout bug on job posting

--- a/assets/styles/_scss/_home.scss
+++ b/assets/styles/_scss/_home.scss
@@ -42,7 +42,6 @@ $medium-screen: em(640) !default;
 
 .job-posting-block {
   $link-background: lighten($gainsboro, 10%);
-  margin-bottom: 3em;
   text-align: center;
 
   @include media($medium-screen) {
@@ -58,7 +57,7 @@ $medium-screen: em(640) !default;
   }
 
   hr {
-    margin-bottom: 3em;
+    margin: 3em 0;
   }
 }
 
